# memcpy_armv6m

./: CMakeLists.txt  LICENSE  Readme.md
memops_opt/: CMakeLists.txt  memcpy_armv6m.S  memcpy_armv6m_macros.S  memops_opt.c  memops_opt.h
memops_opt/test/: CMakeLists.txt  README.md  cleanresults.bat  generate-cases-includes.py  generate-cases.py  generate.bat  memcpy_armv6m_test.S  test-memcpy.c  test-memcpy.h
